# rtllm-eval

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
MCP/: iverilog_mcp_client.py  iverilog_mcp_server.py
RTLLM/Arithmetic/Accumulator/accu/: design.v  design_description.txt  netlist.vvp  verified_accu.v
RTLLM/Arithmetic/Adder/adder_16bit/: design.v  design_description.txt  netlist.vvp  testbench.v  verified_adder_16bit.v
RTLLM/Arithmetic/Adder/adder_32bit/: design.v  design_description.txt  makefile  netlist.vvp  testbench.v  verified_adder_32bit.v
RTLLM/Arithmetic/Adder/adder_8bit/: design.v  design_description.txt  makefile  netlist.vvp  output.txt  testbench.v  verified_adder_8bit.v
RTLLM/Arithmetic/Adder/adder_bcd/: design.v  design_description.txt  makefile  netlist.vvp  testbench.v  verified_adder_bcd.v
RTLLM/Arithmetic/Adder/adder_pipe_64bit/: design.v  design_description.txt  makefile  netlist.vvp  testbench.v  verified_adder_64bit.v
RTLLM/Arithmetic/Comparator/comparator_3bit/: design_description.txt  makefile  netlist.vvp  testbench.v  verified_comparator_3bit.v
RTLLM/Arithmetic/Comparator/comparator_4bit/: design.v  design_description.txt  makefile  netlist.vvp  testbench.v  verified_comparator_4bit.v
RTLLM/Arithmetic/Divider/div_16bit/: design.v  design_description.txt  makefile  (+3 more)
config/: reflection_prompt.yml  system_prompt.yml
rag_dataset/chroma/: chroma.sqlite3
run_verilog_generation_agent/: agentic_verilog_generation.py  basic_verilog_generation.py  rag_verilog_generation.py  setup_rag.py  setup_verilog_generation_agent.py
(+192 files in other folders)
