
[tool.poetry]
name = "rtllm_eval"
version = "0.1.0"
description = "dependency management"
authors = ["Arun Ravindran <arun.ravindran@charlotte.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
langgraph = "^0.3.18"
langchain = "^0.3.21"
langchain-core = "^0.3.47"
langchain-openai = "^0.3.9"
langchain-community = "^0.3.20"
langchain-anthropic = "^0.3.10"
langchain-google-genai = "^2.1.2"
chromadb = "^1.0.3"
